fix misalignment of tooltipImg overlay & hero-img at 992px width and up

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1240,7 +1240,7 @@ p {
 
   .tooltip-selector > .tooltipimg {
   	top: -259px;
-  	left: -7px;
+  	left: -11px;
   	height: 255px;
   	width: 255px;
   }
